--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "test": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "deploy": "git subtree push --prefix dist origin gh-pages"
+    "deploy": "vue-cli-service build && git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
     "@vue/composition-api": "^1.4.6",
